--- a/yes.html
+++ b/yes.html
@@ -1,10 +1,308 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>YAY 💖</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      height: 100vh;
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      overflow: hidden;
+      position: relative;
+    }
+
+    @keyframes gradient {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+    }
+
+    .container {
+      position: relative;
+      z-index: 10;
+      background: rgba(255, 255, 255, 0.95);
+      padding: 60px 40px;
+      border-radius: 25px;
+      box-shadow: 0 30px 80px rgba(0, 0, 0, 0.3);
+      max-width: 600px;
+      backdrop-filter: blur(10px);
+      animation: popIn 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .gif-container {
+      animation: gifSlideIn 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    .celebration-gif {
+      width: 200px;
+      height: 200px;
+      border-radius: 20px;
+      object-fit: cover;
+      animation: bounce 2s ease-in-out infinite;
+    }
+
+    @keyframes gifSlideIn {
+      0% {
+        transform: translateY(-30px) scale(0.8);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+      }
+    }
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-15px);
+      }
+    }
+
+    @keyframes popIn {
+      0% {
+        transform: scale(0.7) translateY(40px);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1) translateY(0);
+        opacity: 1;
+      }
+    }
+
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3.5rem;
+      background: linear-gradient(135deg, #ff1744, #ff6e40);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-bottom: 20px;
+      animation: slideDown 0.8s ease 0.2s both;
+    }
+
+    @keyframes slideDown {
+      from {
+        transform: translateY(-20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    p {
+      font-size: 1.3rem;
+      color: #666;
+      font-weight: 300;
+      margin-bottom: 30px;
+      animation: slideDown 0.8s ease 0.4s both;
+    }
+
+    .heart-beat {
+      display: inline-block;
+      animation: heartBeat 0.8s ease 0.6s both;
+    }
+
+    @keyframes heartBeat {
+      0% {
+        transform: scale(1);
+      }
+      25% {
+        transform: scale(1.3);
+      }
+      50% {
+        transform: scale(1);
+      }
+      75% {
+        transform: scale(1.3);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    .message {
+      font-size: 1.1rem;
+      color: #ff1744;
+      font-weight: 600;
+      margin-top: 20px;
+      animation: slideDown 0.8s ease 0.8s both;
+    }
+
+    .floating-hearts {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      top: 0;
+      left: 0;
+    }
+
+    .heart {
+      position: absolute;
+      font-size: 2.5rem;
+      opacity: 0.8;
+      animation: float-up 6s infinite linear;
+    }
+
+    .heart:nth-child(1) { left: 10%; animation-delay: 0s; animation-duration: 7s; }
+    .heart:nth-child(2) { left: 25%; animation-delay: 1s; animation-duration: 8s; }
+    .heart:nth-child(3) { left: 50%; animation-delay: 2s; animation-duration: 9s; }
+    .heart:nth-child(4) { left: 75%; animation-delay: 3s; animation-duration: 7.5s; }
+    .heart:nth-child(5) { left: 90%; animation-delay: 4s; animation-duration: 8.5s; }
+
+    @keyframes float-up {
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 0;
+      }
+      10% {
+        opacity: 0.8;
+      }
+      90% {
+        opacity: 0.8;
+      }
+      100% {
+        transform: translateY(-100vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
+  </style>
 </head>
-<body style="text-align:center; font-family:Arial;">
-  <h1>💘 YAY! I knew it! 💘</h1>
-  <p>You just made my day 😍</p>
+<body>
+  <canvas id="canvas"></canvas>
+
+  <div class="floating-hearts">
+    <span class="heart">💕</span>
+    <span class="heart">💖</span>
+    <span class="heart">💗</span>
+    <span class="heart">💝</span>
+    <span class="heart">💓</span>
+  </div>
+
+  <div class="container">
+    <div class="gif-container">
+      <img src="assets/yes.gif" alt="Celebration gif" class="celebration-gif">
+    </div>
+    <h1>💘 YAY! <span class="heart-beat">💖</span> 💘</h1>
+    <p>I knew you'd say YES!</p>
+    <p class="message">You just made me the happiest person ever 😍✨</p>
+  </div>
+
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let particles = [];
+
+    class Confetti {
+      constructor(x, y) {
+        this.x = x;
+        this.y = y;
+        this.vx = (Math.random() - 0.5) * 12;
+        this.vy = Math.random() * -8 - 4;
+        this.life = 1;
+        this.decay = Math.random() * 0.01 + 0.005;
+        this.size = Math.random() * 4 + 3;
+        this.rotation = Math.random() * Math.PI * 2;
+        this.rotationSpeed = (Math.random() - 0.5) * 0.2;
+        this.color = ["#ff1744", "#ff5252", "#ff6e40", "#ffeb3b", "#ff69b4", "#00bcd4", "#9c27b0"][
+          Math.floor(Math.random() * 7)
+        ];
+      }
+
+      update() {
+        this.x += this.vx;
+        this.y += this.vy;
+        this.vy += 0.25; // gravity
+        this.life -= this.decay;
+        this.rotation += this.rotationSpeed;
+      }
+
+      draw(ctx) {
+        ctx.save();
+        ctx.globalAlpha = this.life;
+        ctx.fillStyle = this.color;
+        ctx.translate(this.x, this.y);
+        ctx.rotate(this.rotation);
+        ctx.filledRect = ctx.fillRect(-this.size / 2, -this.size / 2, this.size, this.size);
+        ctx.fillRect(-this.size / 2, -this.size / 2, this.size, this.size);
+        ctx.restore();
+      }
+    }
+
+    function createConfetti(count = 50) {
+      for (let i = 0; i < count; i++) {
+        const x = Math.random() * window.innerWidth;
+        const y = -10;
+        particles.push(new Confetti(x, y));
+      }
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      particles = particles.filter((p) => p.life > 0);
+
+      particles.forEach((p) => {
+        p.update();
+        p.draw(ctx);
+      });
+
+      if (particles.length > 0) {
+        requestAnimationFrame(animate);
+      }
+    }
+
+    window.addEventListener("resize", () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+
+    // Create initial confetti burst
+    createConfetti(80);
+    animate();
+
+    // Create additional confetti every 2 seconds
+    setInterval(() => {
+      createConfetti(30);
+      animate();
+    }, 2000);
+  </script>
 </body>
 </html>
