update relative path

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="card">
       <div class="card-shimmer"></div>
       <div class="gif-container">
-        <img id="dynamicGif" src="assets/cutepuppy.gif" alt="Cute animals" class="cute-gif">
+        <img id="dynamicGif" src="./assets/cutepuppy.gif" alt="Cute animals" class="cute-gif">
       </div>
       <h1 class="title">Will you be my Valentine?</h1>
       <p id="message" class="message">You have only one correct answer 😌</p>
