--- a/yes.html
+++ b/yes.html
@@ -214,7 +214,7 @@
 
   <div class="container">
     <div class="gif-container">
-      <img src="assets/yes.gif" alt="Celebration gif" class="celebration-gif">
+      <img src="./assets/yes.gif" alt="Celebration gif" class="celebration-gif">
     </div>
     <h1>💘 YAY! <span class="heart-beat">💖</span> 💘</h1>
     <p>I knew you'd say YES!</p>
